--- a/peppcov19net.ipynb
+++ b/peppcov19net.ipynb
@@ -6,7 +6,7 @@
       "name": "peppcov19net.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPAoKLYVFMjVS/M9Vz3jg50",
+      "authorship_tag": "ABX9TyN+/Bq4CvblKILQl+Cyvlcv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +15,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -138,33 +139,139 @@
       },
       "source": [
         "class ChestXRayDataset(torch.utils.data.Dataset):\n",
-        "  def __init__(self, image_dirs, transform):\n",
-        "    def get_images(class_name):\n",
-        "      images = [x for x in os.listdir(image_dors[class_name]) if x.lower().endswith('png')]\n",
-        "      print(f'Found {len(images)} {class_name} examples')\n",
-        "      return images\n",
-        "\n",
-        "    self.images = {}\n",
-        "    self.class_names = ['normal', 'viral', 'covid']\n",
-        "\n",
-        "    for c in self.class_names:\n",
-        "      self.images[c] = get_images(c)\n",
+        "    def __init__(self, image_dirs, transform):\n",
+        "        def get_images(class_name):\n",
+        "            images = [x for x in os.listdir(image_dirs[class_name]) if x.lower().endswith('png')]\n",
+        "            print(f'Found {len(images)} {class_name} examples')\n",
+        "            return images\n",
+        "        \n",
+        "        self.images = {}\n",
+        "        self.class_names = ['normal', 'viral', 'covid']\n",
+        "        \n",
+        "        for class_name in self.class_names:\n",
+        "            self.images[class_name] = get_images(class_name)\n",
+        "            \n",
+        "        self.image_dirs = image_dirs\n",
+        "        self.transform = transform\n",
+        "        \n",
         "    \n",
-        "    self.image_dirs = image_dirs\n",
-        "    self.transform = transform\n",
-        "\n",
-        "  def __len__(self):\n",
-        "    return sum([len(self.images[c]) for c in self.class_names])\n",
-        "\n",
-        "  def __getitem__(self, index):\n",
-        "    class_name = random.choice(self.class_names)\n",
-        "    index = index % len(self.images[class_name]) # avoid out of bounds index values of different classes\n",
-        "    image_name = self.images[class_name][index]\n",
-        "    image_path = os.path.join(self.image_dirs[class_name], image_name)\n",
-        "    image = Image.open(image_path).convert('RGB') # Using ResNet18 so have to convert image to RGB\n",
-        "    return self.transform(image), self.class_names.index(class_name)\n"
+        "    def __len__(self):\n",
+        "        return sum([len(self.images[class_name]) for class_name in self.class_names])\n",
+        "    \n",
+        "    \n",
+        "    def __getitem__(self, index):\n",
+        "        class_name = random.choice(self.class_names)\n",
+        "        index = index % len(self.images[class_name])\n",
+        "        image_name = self.images[class_name][index]\n",
+        "        image_path = os.path.join(self.image_dirs[class_name], image_name) # avoid out of bounds index values of different classes\n",
+        "        image = Image.open(image_path).convert('RGB') # Using ResNet18 so have to convert image to RGB\n",
+        "        return self.transform(image), self.class_names.index(class_name) # transform for tensor\n"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Q3ZuO9VPGPNT"
+      },
+      "source": [
+        "Image Transformations"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L8Js4hfLGQ5z"
+      },
+      "source": [
+        "train_transform = torchvision.transforms.Compose([\n",
+        "  torchvision.transforms.Resize(size=(224, 224)), # convert image to size ResNet expects\n",
+        "  torchvision.transforms.RandomHorizontalFlip(), # Used to augment data\n",
+        "  torchvision.transforms.ToTensor(),\n",
+        "  torchvision.transforms.Normalize(mean=[0.485, 0.456, 0.0406],\n",
+        "                                   std=[0.229, 0.224, 0.225]) #Normalize for ResNet18\n",
+        "])"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l9YPKAC9SvEc"
+      },
+      "source": [
+        "test_transform = torchvision.transforms.Compose([\n",
+        "  torchvision.transforms.Resize(size=(224, 224)), # convert image to size ResNet expects\n",
+        "  torchvision.transforms.ToTensor(),\n",
+        "  torchvision.transforms.Normalize(mean=[0.485, 0.456, 0.0406],\n",
+        "                                   std=[0.229, 0.224, 0.225]) #Normalize for ResNet18\n",
+        "])"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JCJb4jlnS6oa"
+      },
+      "source": [
+        "Prepare DataLoader"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 341
+        },
+        "id": "kESCDBSNS8V3",
+        "outputId": "1249eec2-8f63-4bb3-c901-bae081e914c5"
+      },
+      "source": [
+        "train_dirs = {\n",
+        "    'normal': 'COVID-19 Radiography Database/normal',\n",
+        "    'viral': 'COVID-19 Radiography Database/viral',\n",
+        "    'covid': 'COVID-19 Radiography Database/covid'\n",
+        "}\n",
+        "\n",
+        "train_dataset = ChestXRayDataset(train_dirs, train_transform)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-936b616d0350>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m }\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mtrain_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mChestXRayDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dirs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_transform\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-8-a4ecd0b825dd>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, image_dirs, transform)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mclass_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclass_names\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mclass_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage_dirs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage_dirs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-8-a4ecd0b825dd>\u001b[0m in \u001b[0;36mget_images\u001b[0;34m(class_name)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage_dirs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mget_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m             \u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_dirs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mclass_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'png'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Found {len(images)} {class_name} examples'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'COVID-19 Radiography Database/normal'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jh_WwP8PTGLk"
+      },
+      "source": [
+        "test_dirs = {\n",
+        "    'normal': 'COVID-19 Radiography Database/test/normal',\n",
+        "    'viral': 'COVID-19 Radiography Database/test/viral',\n",
+        "    'covid': 'COVID-19 Radiography Database/test/covid'\n",
+        "}\n",
+        "\n",
+        "test_dataset"
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
